ShareExchange4YouFrontend/ShareExchange4YouFrontend/ingress-api.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: grp4-ingress-api
    namespace: swtdisp-gr4
    annotations:
      ingress.kubernetes.io/add-base-url: "true"
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
      
spec:
    rules:
    - host: grp4-ingress.backend.dk
      http:
        paths:
        - path: /api/ShareExchange4You/GetShares
          backend:
            serviceName: grp4-shareexchange4you-frontend-service
            servicePort: 8888
        - path: /api/ShareExchange4You/GetUsers
          backend:
            serviceName: grp4-shareexchange4you-frontend-service
            servicePort: 8888
        - path: /api/ShareExchange4You/BuyShare
          backend:
            serviceName: grp4-shareexchange4you-frontend-service
            servicePort: 8888
        - path: /api/ShareExchange4You/SellShare
          backend:
            serviceName: grp4-shareexchange4you-frontend-service
            servicePort: 8888
        - path: /api/ShareExchange4You/GetSharesForsale
          backend:
            serviceName: grp4-shareexchange4you-frontend-service
            servicePort: 8888
